# fruits-mcp

./: README.md  mcp-config.json  pyproject.toml
src/fruits_mcp/: server.py
