[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fruits-mcp"
version = "1.0.0"
description = "MCP server for Product Fruits Knowledge Base API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
fruits-mcp = "fruits_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fruits_mcp"]
